--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/redux": "^3.6.0",
     "init": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -60,6 +61,8 @@
     "@storybook/test": "^7.6.7",
     "eslint-plugin-storybook": "^0.6.15",
     "prop-types": "^15.8.1",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "storybook": "^7.6.10",
     "webpack": "^5.89.0"
   }
